<resources>
    <string name="app_name">计算器</string>
    <string name="exp">表达式</string>
    <string name="res">计算结果</string>

    <string name="bt1">(</string>
    <string name="bt2">)</string>
    <string name="bt3">del</string>
    <string name="bt4">C</string>

    <string name="bt5">7</string>
    <string name="bt6">8</string>
    <string name="bt7">9</string>
    <string name="bt8">/</string>

    <string name="bt9">4</string>
    <string name="bt10">5</string>
    <string name="bt11">6</string>
    <string name="bt12">*</string>

    <string name="bt13">1</string>
    <string name="bt14">2</string>
    <string name="bt15">3</string>
    <string name="bt16">-</string>

    <string name="bt17">0</string>
    <string name="bt18">.</string>
    <string name="bt19">=</string>
    <string name="bt20">+</string>

</resources>
