<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_exp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/exp"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#C1878787" />

    <TextView
        android:id="@+id/tv_res"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="end"
        android:hint="@string/res"
        android:textSize="20sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="30dp"
        android:columnCount="4"
        android:rowCount="5">

        <!--第一行-->
        <Button
            android:id="@+id/bt1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt2"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt3"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt4"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="clearClick"
            android:text="@string/bt4"
            android:textSize="20sp" />

        <!--第二行-->
        <Button
            android:id="@+id/bt5"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt5"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt6"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt6"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt7"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt7"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt8"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt8"
            android:textSize="20sp" />

        <!--第三行-->
        <Button
            android:id="@+id/bt9"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt9"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt10"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt10"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt11"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt11"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt12"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt12"
            android:textSize="20sp" />

        <!--第四行-->
        <Button
            android:id="@+id/bt13"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt13"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt14"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt14"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt15"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt15"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt16"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt16"
            android:textSize="20sp" />

        <!--第五行-->
        <Button
            android:id="@+id/bt17"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt17"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt18"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt18"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt19"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="equalClick"
            android:text="@string/bt19"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt20"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="numClick"
            android:text="@string/bt20"
            android:textSize="20sp" />
    </GridLayout>

</LinearLayout>